# lsu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: codecov.yml
.github/workflows/: linux-packaging.yml  linux.yml  rust-ci.yml  rust.yml
packaging/archlinux/: .SRCINFO  PKGBUILD
packaging/gentoo/app-misc/lsu/: Manifest  lsu-9999.ebuild  metadata.xml
packaging/nix/: default.nix
src/: cli.rs  command.rs  journal.rs  lib.rs  main.rs  rows.rs  systemd.rs  types.rs
src/app/: mod.rs
src/app/tui/: debug.rs  input.rs  mod.rs  render.rs  state.rs  workers.rs
tests/: cli_runtime_integration.rs  command_integration.rs  tui_runtime_integration.rs
