# Copyright (c) 2026 l5yth
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lsu"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Terminal UI for systemd services and their journal"
readme = "README.md"
repository = "https://github.com/l5yth/lsu"
homepage = "https://github.com/l5yth/lsu"
keywords = ["systemd", "tui", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29"
ratatui = "0.30"
